# frvcp

./: .gitignore  Cargo.toml  README.md
frvcpy/: solver.py
frvcpy/test/: test.py
instances/: frvcpy-instance.schema.json
src/: algorithm.rs  core.rs  lib.rs  main.rs  solver.rs  translator.rs
tests/: integration_tests.rs
