[package]
name = "frvcp"
version = "0.1.0"
edition = "2024"
authors = ["HellOwhatAs <xjq701229@outlook.com>"]
description = "A pure Rust implementation for solving the Fixed Route Vehicle Charging Problem (FRVCP), ported from frvcpy."
repository = "https://github.com/HellOwhatAs/frvcp"
readme = "README.md"
license = "MIT"
keywords = ["frvcp", "vrp", "CO", "rich-vrp", "evrp"]
categories = ["algorithms", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
quick-xml = { version = "0.36", features = ["serialize"], optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
translator = ["quick-xml"]
cli = ["dep:clap", "translator"]

[[bin]]
name = "frvcp"
path = "src/main.rs"
required-features = ["cli"]
